getAddrIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: getaddr
  labels:
    app: getaddr
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: getaddr
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: getaddr-v1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: getaddr
        version: v1
    spec:
      containers:
      - name: getaddr
        image: carlo/getaddr:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
