getAddrIP-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: getaddr-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "getaddr.carlo.ltd"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: getaddr
spec:
  hosts:
  - "getaddr.carlo.ltd"
  gateways:
  - getaddr-gateway
  http:
    - match:
        - uri:
            exact: /host
        - uri:
            exact: /
      route:
        - destination:
            host: getaddr
            port:
              number: 80
